[gd_scene load_steps=3 format=3 uid="uid://djlfssecialsk"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_2338h"]

[sub_resource type="LabelSettings" id="LabelSettings_bacov"]
font_size = 50

[node name="PauseMenu" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 50
script = ExtResource("1_2338h")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
vertical = true

[node name="Label" type="Label" parent="BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Paused"
label_settings = SubResource("LabelSettings_bacov")
horizontal_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 40
vertical = true

[node name="Resume" type="Button" parent="BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"

[node name="QuitToMenu" type="Button" parent="BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit To Menu
"

[node name="QuitToDesktop" type="Button" parent="BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit To Desktop
"

[connection signal="pressed" from="BoxContainer/BoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="BoxContainer/BoxContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="BoxContainer/BoxContainer/QuitToDesktop" to="." method="_on_quit_to_desktop_pressed"]
